fixes to rendering

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,20 +80,20 @@
         flex-direction: column;
     }
     .svg-tit {
-        width: 15%;
-        height: 15%;
+        height: 350px;
+        width: 350px;
     }
     .svg-social {
         height: 72px;
+        width: 72px;
+        margin: auto;
     }
+
     .socials-container {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 75px;
+        justify-content: space-around;
+        width: 100%;
         padding-top: 200px;
-        padding-left: 500px;
-        padding-right: 500px;
     }
 </style>
 <div class="header">
@@ -106,21 +106,21 @@
 </div>
 
 <div class="titles">
-    <img src="jb.pk.def.svg" alt="SVG" class="svg-tit"/>
+    <img src="jb.pk.def.svg" alt="jetbrains logo personalised mock" class="svg-tit"/>
     <h3 class="head3">piker <strong>is a dev</strong></h3>
     <h5 class="head5">or not. I might be lying.</h5>
 </div>
 <div class="socials-container">
-    <a href="https://github.com/Piker98988" class="a-socials"><img src="github-mark-white.svg" class="svg-social" alt="github"/></a>
+    <a href="https://github.com/Piker98988"><img src="github-mark-white.svg" class="svg-social" alt="github"/></a>
     <iframe
+            class="a-socials"
             title="Discord user embed"
-            width="340"
+            width=340
             height=72
             sandbox="allow-scripts"
             src="https://widgets.vendicated.dev/user?id=969989127518953542&theme=dark&banner=false&full-banner=false&rounded-corners=true&discord-icon=true&badges=false&guess-nitro=false&"
     ></iframe>
-    <a href="mailto:piker98@tutanota.com" class="a-socials"><img src="mail_material_96.svg" class="svg-social" alt="email"/></a>
-    <a href="https://wakatime.com/@piker" class="a-socials"><img src="Logo-inverted.svg" class="svg-social" alt="wakatime"/></a>
+    <a href="https://wakatime.com/@piker"><img src="Logo-inverted.svg" class="svg-social" alt="wakatime"/></a>
 </div>
 </body>
 </html>
