--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,8 @@
 ---
+
 import StdHeader from "../components/StdHeader.astro";
----
+import CodeHeading from "../components/CodeHeading.astro";
+import TestTypewriter from "../components/testTypewriter.astro";---
 <html lang="en">
 
 <head>
@@ -11,7 +13,7 @@ import StdHeader from "../components/StdHeader.astro";
     <link rel="icon" type="image/svg+xml" href="/jb.pk.def.svg"/>
     <meta name="viewport" content="width=device-width"/>
     <meta name="generator" content={Astro.generator}/>
-    <title>piker's hangout</title>
+    <title>contact piker</title>
 </head>
 <style is:global>
     body {
@@ -20,12 +22,55 @@ import StdHeader from "../components/StdHeader.astro";
 </style>
 <body>
 <style>
+    .code-title {
+        text-align: left;
+        background-color: #4C505B;
+        color: white;
+        padding: 6px 15px;
+        border-radius: 4px;
+        font-size: x-large;
+        font-weight: bold;
+        font-family: "Anonymous pro", monospace;
+    }
     .head3 {
         padding-top: 5px;
         font-size: xxx-large;
         color: #A8A2A2;
         text-align: center;
         font-family: "Anonymous pro", monospace;
+    }
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 6px 15px;
+        position: sticky;
+        top: 0;
+        z-index: 1;
+        background-color: #393D49;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        transition: box-shadow 0.3s ease-in-out;
+    }
+    .header.sticky {
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    }
+    .button-container {
+        gap: 10px;
+        display: flex;
+    }
+    .button-header {
+        background-color: #4C505B;
+        color: white;
+        padding: 3px 10px;
+        cursor: pointer;
+        border-radius: 4px;
+        height: 30px;
+        transition: 0.3s ease-in-out;
+    }
+    .button-header:hover {
+        color: black;
+        background-color: #ccc;
+        cursor: pointer;
     }
     .head5 {
         font-size: large;
@@ -48,32 +93,17 @@ import StdHeader from "../components/StdHeader.astro";
         width: 72px;
         margin: auto;
     }
+
     .socials-container {
         display: flex;
-        justify-content: center;
-        gap: 4rem;
+        justify-content: space-around;
         width: 100%;
         padding-top: 200px;
     }
+
+
 </style>
 <StdHeader/>
-
-<div class="titles">
-    <img src="jb.pk.def.svg" alt="jetbrains logo personalised mock" class="svg-tit"/>
-    <h3 class="head3">piker <strong>is a dev</strong></h3>
-    <h5 class="head5">or not. I might be lying.</h5>
-</div>
-<div class="socials-container">
-    <a href="https://github.com/Piker98988"><img src="github-mark-white.svg" class="svg-social" alt="github"/></a>
-    <iframe
-            class="a-socials"
-            title="Discord user embed"
-            width=340
-            height=72
-            sandbox="allow-scripts"
-            src="https://widgets.vendicated.dev/user?id=969989127518953542&theme=dark&banner=false&full-banner=false&rounded-corners=true&discord-icon=true&badges=false&guess-nitro=false&"
-    ></iframe>
-    <a href="https://wakatime.com/@piker"><img src="Logo-inverted.svg" class="svg-social mr-20" alt="wakatime"/></a>
-</div>
+<CodeHeading command="echo $CONTACT"></CodeHeading>
 </body>
-</html>
+
