how tf do i animate that sh

--- a/src/pages/about_me.astro
+++ b/src/pages/about_me.astro
@@ -37,15 +37,107 @@ import CodeHeading from "../components/CodeHeading.astro";---
         border: 1px solid;
         margin-bottom: 5px;
     }
+    .par {
+        color: #A8A2A2;
+        font-family: "Montserrat", sans-serif;
+        margin-left: 1.25rem;
+        margin-right: 1.25rem;
+    }
 </style>
 <StdHeader/>
-<CodeHeading command="whoami"/>
-<div class="grid grid-cols-2 gap-5">
-    <div class="column">
-        <h3 class="head3">This is a head 3 in left column</h3>
+<CodeHeading command="whoami" characters="6"/>
+<div>
+    <div class="grid grid-cols-2 gap-5">
+        <div class="column">
+            <h3 class="head3 ml-5 mr-5">Me, piker</h3>
+            <p class="par">
+                And this is a paragraph right below it.
+                Here goes some text and text and text and text.
+                This text will then be rendered in the webpage, as any other.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+            <img src="jb.pk.def.svg" class="m-5 w-11/12" alt="photo of piker"/>
+
+        </div>
+        <div class="column">
+            <img src="jb.pk.def.svg" class="m-5 w-11/12" alt="photo of piker"/>
+            <h3 class="head3 ml-5 mr-5">I, the only</h3>
+            <p class="par">
+                Me, and only me. It is indeed me.
+                Im 16 years old. Me, not any other.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            </p>
+            <img src="jb.pk.def.svg" class="m-5 w-11/12" alt="photo of piker"/>
+            <h3 class="head3"> Albeit another heading.</h3>
+        </div>
     </div>
-    <div class="column">
-        <img src="jb.pk.def.svg" alt=""/>
+</div>
+<div>
+    <div class="grid grid-cols-2 gap-5">
+        <div class="column">
+            <h3 class="head3 ml-5 mr-5">Me, piker</h3>
+            <p class="par">
+                And this is a paragraph right below it.
+                Here goes some text and text and text and text.
+                This text will then be rendered in the webpage, as any other.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+            <img src="jb.pk.def.svg" class="m-5 w-11/12" alt="photo of piker"/>
+
+        </div>
+        <div class="column">
+            <img src="jb.pk.def.svg" class="m-5 w-11/12" alt="photo of piker"/>
+            <h3 class="head3 ml-5 mr-5">I, the only</h3>
+            <p class="par">
+                Me, and only me. It is indeed me.
+                Im 16 years old. Me, not any other.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            </p>
+            <img src="jb.pk.def.svg" class="m-5 w-11/12" alt="photo of piker"/>
+            <h3 class="head3"> Albeit another heading.</h3>
+        </div>
+    </div>
+</div>
+<div>
+    <div class="grid grid-cols-2 gap-5">
+        <div class="column">
+            <h3 class="head3 ml-5 mr-5">Me, piker</h3>
+            <p class="par">
+                And this is a paragraph right below it.
+                Here goes some text and text and text and text.
+                This text will then be rendered in the webpage, as any other.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+            <img src="jb.pk.def.svg" class="m-5 w-11/12" alt="photo of piker"/>
+
+        </div>
+        <div class="column">
+            <img src="jb.pk.def.svg" class="m-5 w-11/12" alt="photo of piker"/>
+            <h3 class="head3 ml-5 mr-5">I, the only</h3>
+            <p class="par">
+                Me, and only me. It is indeed me.
+                Im 16 years old. Me, not any other.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            </p>
+            <img src="jb.pk.def.svg" class="m-5 w-11/12" alt="photo of piker"/>
+            <h3 class="head3"> Albeit another heading.</h3>
+        </div>
+    </div>
+</div>
+<div>
+    <div class="grid grid-cols-2 gap-5">
+        <div class="column">
+            <h3 class="head3 ml-5 mr-5">Me, piker</h3>
+            <p class="par">
+                And this is a paragraph right below it.
+                Here goes some text and text and text and text.
+                This text will then be rendered in the webpage, as any other.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+        </div>
+        <div class="column">
+            <img src="jb.pk.def.svg" class="m-5 w-11/12" alt="photo of piker"/>
+        </div>
     </div>
 </div>
 </body>
