--- a/src/components/StdHeader.astro
+++ b/src/components/StdHeader.astro
@@ -37,8 +37,8 @@ const {  } = Astro.props;
         align-items: center;
         padding: 6px 15px;
         position: sticky;
+        width: 100%;
         top: 0;
-        z-index: 1;
         background-color: #393D49;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         transition: box-shadow 0.3s ease-in-out;
@@ -50,8 +50,27 @@ const {  } = Astro.props;
         gap: 10px;
         display: flex;
     }
+    @media (max-width: 599px) and (min-width: 400px) {
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 6px 15px;
+            position: sticky;
+            width: 125%;
+            top: 0;
+            background-color: #393D49;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s ease-in-out;
+        }
+    }
+    @media (max-width: 399px) {
+        .header {
+            width: 150%;
+        }
+    }
 </style>
-
+<div class="not_viewable"></div>
 <div class="header">
     <a href="/" class="code-title"><strong>piker.dev</strong></a>
     <div class="button-container">
