--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import StdHeader from "../components/StdHeader.astro";
     <meta name="generator" content={Astro.generator}/>
     <title>piker's hangout</title>
 </head>
+
 <style is:global>
     body {
         background-color: #141D2C;
@@ -51,6 +52,7 @@ import StdHeader from "../components/StdHeader.astro";
     .socials-container {
         display: flex;
         justify-content: center;
+        align-items: center;
         gap: 4rem;
         width: 100%;
         padding-top: 200px;
