responsive CodeHeading.astro

--- a/src/components/CodeHeading.astro
+++ b/src/components/CodeHeading.astro
@@ -35,6 +35,16 @@ const commandSteps: number = Number(characters);
         color: #4AF626;
 
     }
+    @media (max-width: 599px) and (min-width: 400px) {
+        .headtitle-div {
+            width: 125%;
+        }
+    }
+    @media (max-width: 399px) {
+        .headtitle-div {
+            width: 150%;
+        }
+    }
     /* cursor blink */
     @keyframes blink-caret {
         from, to { border-color: transparent }
