--- a/src/components/CodeHeading.astro
+++ b/src/components/CodeHeading.astro
@@ -58,7 +58,7 @@ const commandSteps: number = Number(characters);
     }
     .headtitle-div {
         display: flex;
-        width: auto;
+        width: 100%;
         justify-content: left;
         padding-top: 5px;
         padding-bottom: 5px;
